// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Popover Button as a trigger - Right aligned 1`] = `
.c1 {
  position: relative;
}

.c0 {
  display: inline-block;
}

<div
  style={
    Object {
      "textAlign": "right",
      "width": 300,
    }
  }
>
  <div
    className="c0"
  >
    <div
      id="trigger"
      onClick={[Function]}
    >
      <button>
        Trigger
      </button>
    </div>
    <div
      className="c1"
    />
  </div>
</div>
`;

exports[`Storyshots Popover Center aligned 1`] = `
.c3 {
  position: relative;
}

.c1 {
  display: inline-block;
}

.c1 .hitWrapper {
  position: relative;
}

.c1 .hitWrapper .hit {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
}

.c2 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #3498db;
}

.c2 > i.margin-left {
  margin-left: 8px;
}

.c2 > i.margin-right {
  margin-right: 8px;
}

.c2 > a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 > a:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c2 > a {
  color: inherit;
}

.c2:hover {
  color: #2980b9;
}

.c0 {
  display: inline-block;
}

<div
  style={
    Object {
      "textAlign": "right",
      "width": 300,
    }
  }
>
  <div
    className="c0"
  >
    <div
      id="trigger"
      onClick={[Function]}
    >
      <div
        className="c1"
      >
        <div
          className="hitWrapper"
        >
          <div
            className="c2"
            disabled={false}
            onMouseLeave={[Function]}
            onMouseOver={[Function]}
            size={16}
            type="#3498db"
          >
            <span>
              Trigger
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c3"
    />
  </div>
</div>
`;

exports[`Storyshots Popover Custom padding 1`] = `
.c1 {
  position: relative;
}

.c0 {
  display: inline-block;
}

<div
  className="c0"
>
  <div
    id="trigger"
    onClick={[Function]}
  >
    <button>
      Trigger
    </button>
  </div>
  <div
    className="c1"
  />
</div>
`;

exports[`Storyshots Popover Default - Link as a trigger 1`] = `
.c3 {
  position: relative;
}

.c1 {
  display: inline-block;
}

.c1 .hitWrapper {
  position: relative;
}

.c1 .hitWrapper .hit {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
}

.c2 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #3498db;
}

.c2 > i.margin-left {
  margin-left: 8px;
}

.c2 > i.margin-right {
  margin-right: 8px;
}

.c2 > a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 > a:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c2 > a {
  color: inherit;
}

.c2:hover {
  color: #2980b9;
}

.c0 {
  display: inline-block;
}

<div
  className="c0"
>
  <div
    id="trigger"
    onClick={[Function]}
  >
    <div
      className="c1"
    >
      <div
        className="hitWrapper"
      >
        <div
          className="c2"
          disabled={false}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          size={16}
          type="#3498db"
        >
          <span>
            Trigger
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c3"
  />
</div>
`;

exports[`Storyshots Popover Dismissable 1`] = `
.c3 {
  position: relative;
}

.c1 {
  display: inline-block;
}

.c1 .hitWrapper {
  position: relative;
}

.c1 .hitWrapper .hit {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
}

.c2 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #3498db;
}

.c2 > i.margin-left {
  margin-left: 8px;
}

.c2 > i.margin-right {
  margin-right: 8px;
}

.c2 > a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 > a:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c2 > a {
  color: inherit;
}

.c2:hover {
  color: #2980b9;
}

.c0 {
  display: inline-block;
}

<div
  className="c0"
>
  <div
    id="trigger"
    onClick={[Function]}
  >
    <div
      className="c1"
    >
      <div
        className="hitWrapper"
      >
        <div
          className="c2"
          disabled={false}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          size={16}
          type="#3498db"
        >
          <span>
            Trigger
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c3"
  />
</div>
`;
